--- a/backend/manifest.yml
+++ b/backend/manifest.yml
@@ -1,3 +1,11 @@
+kind: ConfigMap
+apiVersion: v1
+metadata:
+  name: backend
+  namespace: expense
+data:
+  DB_HOST: mysql
+---
 kind: Deployment
 apiVersion: apps/v1
 metadata:
@@ -26,6 +34,9 @@ spec:
       containers:
       - name: backend
         image: premdaas/backend:1.0
+        envFrom:
+        - configMapRef:
+          name: backend
 
 ---
 apiVersion: v1
