--- a/frontend/manifest.yml
+++ b/frontend/manifest.yml
@@ -1,10 +1,12 @@
-# kind: ConfigMap
-# apiVersion: v1
-# metadata:
-#   name: frontend
-#   namespace: expense
-# data:
-#   DB_HOST: mysql
+kind: ConfigMap
+apiVersion: v1
+metadata:
+  name: frontend
+  namespace: expense
+data:
+  nginx.conf: "user www-data;\n worker_processes 4;\n pid /var/run/nginx.pid;\n #magic___^_^___line\n events {\n   worker_connections 768;\n   # multi_accept on;\n }\n   #magic___^_^___line\n http {\n   #magic___^_^___line\n   ##\n   # Basic Settings\n   ##\n   #magic___^_^___line\n   sendfile on;\n   tcp_nopush on;\n   tcp_nodelay on;\n   keepalive_timeout 65;\n   types_hash_max_size 2048;\n   large_client_header_buffers 6 32k;\n   client_max_body_size 100m;\n   #magic___^_^___line\n   # server_names_hash_bucket_size 64;\n   # server_name_in_redirect off;\n   include /etc/nginx/mime.types;\n   default_type application/octet-stream;\n   #magic___^_^___line\n   ##\n   # Logging Settings\n   ##\n   access_log /var/log/nginx/access.log;\n   error_log /var/log/nginx/error.log debug; # change from debug to warn or error for production\n   #magic___^_^___line\n   ##\n   # Gzip Settings\n   ##\n   gzip on;\n   gzip_disable \"msie6\";\n   #magic___^_^___line\n   ##\n   # Virtual Host Configs\n   ##\n   #magic___^_^___line\n   include /etc/nginx/conf.d/*.conf;\n   include /etc/nginx/sites-enabled/*;\n   #magic___^_^___line\n   server {\n     listen       8080;\n     server_name  localhost;\n     #magic___^_^___line\n     proxy_http_version 1.1;\n     #magic___^_^___line\n     #charset koi8-r;\n     #access_log  /var/log/nginx/host.access.log  main;\n     #error_log /dev/stdout debug;\n     #rewrite_log on;\n     #magic___^_^___line\n     location / {\n         root   /usr/share/nginx/html;\n         index  index.html index.htm;\n         ssi    on;\n     }\n         #magic___^_^___line\n     location /images/ {\n         expires 5s;\n         root   /usr/share/nginx/html;\n         try_files $uri /images/placeholder.png;\n     }\n         #magic___^_^___line\n     #error_page  404              /404.html;\n         #magic___^_^___line\n     # redirect server error pages to the static page /50x.html\n     #\n     error_page   500 502 503 504  /50x.html;\n     location = /50x.html {\n         root   /usr/share/nginx/html;\n     }\n         #magic___^_^___line\n     location /api/ { \n         proxy_pass http://backend:8080/;\n     }\n         #magic___^_^___line\n     }\n         #magic___^_^___line\n }\n|\n         #magic___^_^___line\n"
+
+---
 kind: Deployment
 apiVersion: apps/v1
 metadata:
@@ -33,9 +35,22 @@ spec:
       containers:
       - name: frontend
         image: premdaas/frontend:1.1
+        volumeMounts:
+        - name: nginx-conf
+          mountPath: /etc/nginx/nginx.conf
+          subPath: nginx.conf
+          readOnly: true
         # envFrom:
-# - configMapRef:
-#     name: frontend
+      # - configMapRef:
+      #     name: frontend
+      volumes:
+      - name: nginx-conf
+        configMap:
+          name: frontend
+          items:
+          - key: nginx.conf
+            path: nginx.conf
+
 
 ---
 apiVersion: v1
