--- a/backend/manifest.yml
+++ b/backend/manifest.yml
@@ -34,6 +34,13 @@ spec:
       containers:
       - name: backend
         image: premdaas/backend:1.1
+        resources:
+          requests:
+            cpu: "100m"
+            memory: "128Mi"
+          limits:
+            cpu: "150m"
+            memory: "250Mi"
         envFrom:
         - configMapRef:
             name: backend
