--- a/frontend/manifest.yaml
+++ b/frontend/manifest.yaml
@@ -119,6 +119,13 @@ spec:
       containers:
       - name: frontend
         image: premdaas/frontend:1.1
+        resources:
+          requests:
+            cpu: "100m"
+            memory: "128Mi"
+          limits:
+            cpu: "150m"
+            memory: "250Mi"
         volumeMounts:
         - name: nginx-conf
           mountPath: /etc/nginx/nginx.conf
